--- a/gedi_l1b_processing.ipynb
+++ b/gedi_l1b_processing.ipynb
@@ -5837,6 +5837,30 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "from google.colab import drive\n",
+        "drive.mount('/content/drive')"
+      ],
+      "metadata": {
+        "id": "eGiNuKKSMjMO",
+        "outputId": "113ea04c-63d1-4b5e-e6b2-5711f54d196b",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Mounted at /content/drive\n"
+          ]
+        }
+      ]
     }
   ]
 }
